--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="/js/managers/dataManager.js"></script>
     <script src="/js/managers/uiManager.js"></script>
     <script src="/js/models/bee.js"></script>
+    <script src="/js/models/album.js"></script>
+    <script src="/js/models/photo.js"></script>
+    <script src="/js/models/todo.js"></script>
     <script src="/js/models/company.js"></script>
     <script src="/js/models/address.js"></script>
     <script src="/js/models/geo.js"></script>
